# kyverno-tutorial

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.tours/: main.tour
charts/: README.md
charts/argo-cd/: Chart.yaml  README.md  values-production.yaml  values.yaml
charts/guestbook/: Chart.yaml  README.md  values-production.yaml  values.yaml
charts/guestbook/templates/: application.yaml
charts/kyverno/: Chart.yaml  README.md  values-production.yaml  values.yaml
charts/kyverno-policies/: Chart.yaml  README.md  values-production.yaml  values.yaml
charts/kyverno-policies/templates/: configmap.yaml
charts/kyverno-policies/templates/argo-cd/: consistent-team-ownership.yaml
charts/kyverno-policies/templates/prometheus/: require-alert-responder-label.yaml  scrape-team-target-label.yaml
charts/kyverno/config/: owners.yaml
charts/kyverno/templates/argo-cd/: propagate-application-team-label.yaml
charts/kyverno/templates/prometheus/: rewrite-alert-rules.yaml
charts/monitoring/: Chart.yaml  README.md  values-production.yaml  values.yaml
charts/policy-reporter/: Chart.yaml  README.md  values.yaml
src/tutorial/: __main__.py  cli.py  helm.py  kubectl.py  kubernetes.py
tests/: __init__.py  test_demo.py
